fixed spacing

--- a/style.css
+++ b/style.css
@@ -23,11 +23,15 @@ hr {
   z-index: 1;
   color: rgb(255, 255, 255);
   text-align: center;
-  padding-top: 2em;
-  padding-bottom: 1em;
   letter-spacing: 10px;
-  font-size: max(4vw,2em);
+  font-size: max(4vw,2.8em);
   font-weight: 500;
+  padding-bottom: 0.5em;
+  }
+
+section{
+    min-width: 100vw;
+    padding-bottom: 6em;
   }
 
 .links{
@@ -52,12 +56,24 @@ canvas {
   z-index: -1;
 }
 
+.anchor{
+  display: block;
+  height: 3.2em; /*same height as header*/
+  margin-top: -3.2em; /*same height as header*/
+  visibility: hidden;
+}
+
+.text {
+  color: aliceblue;
+}
+
 /*--- navigation bar ---*/
 
 
 .navbar {
   background-color: rgba(248, 244, 255, 1);
-  height: 4.2em;
+  height: 3.2em;
+  vertical-align: middle;
 }
 .nav-link,
 .navbar-title {
@@ -70,11 +86,13 @@ canvas {
   text-align: center;
   vertical-align: center;
   margin-left: 1em;
+  margin-bottom: 0;
 }
 
 .nav-link {
   margin-right: 2em !important;
   color: rgb(54, 54, 54) !important;
+
   
 
 
@@ -189,52 +207,30 @@ canvas {
   flex-wrap: nowrap;
   display: inline-flex;
   z-index: 1;
-}
-
-.introtext {
- margin-left: 2em;
- margin-top: 0em;
- font-size: 1.3em;
-}
-
-.about {
-  margin-bottom: 5em;
+  margin-bottom: -4em;
   
 }
 
+.introtext {
+ font-size: 1.15em;
+}
+
+
 .profpic {
-  display: flex;
-  flex-wrap: row;
-  max-height: 80%;
 }
 
 .prof {
   position:relative;
-  max-width: 80%;
+  max-width: 100%;
   object-fit: contain;
-  height: 80%;
-  margin-top: -1em;
+  max-height: 80%;
+  
 }
 /*--- projects section ---*/
 
-.projects {
-  /*border-top: 1px solid rgba(132, 148, 140, 0.7);
-  background:linear-gradient(0deg, rgba(207, 207, 207, 0.8), rgba(207, 207, 207, 0.8)), url("background5.jpg");
-  background-size: cover;
-	background-position: left;
-  position: relative;*/
-  padding-bottom: 1.5em;
-}
-
-.projects h1  {
-  color: rgb(45, 45, 45);
-  text-align: center;
-  padding-top: 2em;
-  padding-bottom: 1em;
-}
 
 .features {
-	margin: 4em auto;
+	margin: 0 auto;
 	padding: 1em;
 	position: relative;
 }
@@ -284,7 +280,7 @@ canvas {
 
 
 .tags {
-  margin-top: -3em;
+  margin-top: 0em;
   margin-bottom: 2em;
   margin: -3em, auto, 2em, auto ;
   display: flex;
@@ -296,23 +292,21 @@ canvas {
 }
 .img-thumbnail, .vid-thumbnail{
   border-color: white;
+  border-width: 2px;
   cursor: pointer;
   transition: 0.3s;
-  margin: 2%;
-  background: transparent;
-  margin-bottom: 2em;
-  background-color: white;
   opacity: 0.71;
+  min-width: 100%;
+  
 }
 
 .imgdiv{
   overflow:hidden;
-  height:18em;
-  width: 24em;
+  height:12em;
+  width: 16em;
   background: transparent;
   position: relative;
-
-
+  margin-bottom: 8px;
 }
 
 .img-thumbnail:hover, .vid-thumbnail:hover{
@@ -374,8 +368,11 @@ canvas {
 
 .tech {
   max-width: 75%;
-  padding-bottom: 6em;
-  
+  padding-bottom: 3em;
+}
+
+.tools {
+  margin-top: -1em;
 }
 
 .progressbar-title{
@@ -521,24 +518,16 @@ canvas {
   padding: 60px 0 30px;
   font-weight: 300;
 }
-.additional a{
-  color:rgb(179, 231, 255);
-}
+
 .page-footer h6 {
   color:rgb(255, 255, 255);
 }
 
-.page-footer a:hover{
-  color:rgb(160, 228, 248);
-}
 .contact{
   display: inline-block;
   float: right;
   text-align: left;
   
-}
-.contact a {
-  color: rgb(160, 228, 248);
 }
 
 .footer-copyright {
